testsuite/tests/module/mod151.stderr

mod151.hs:2:20: error:
    Ambiguous occurrence ‘id’
    It could refer to either ‘Prelude.id’,
                             imported from ‘Prelude’ at mod151.hs:2:8
                             (and originally defined in ‘GHC.Base’)
                          or ‘M.id’, defined at mod151.hs:2:30
